hmd minor change

--- a/hmd/index.html
+++ b/hmd/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Maia Clisby de la Piedad's homepage</title>
+    <title>Happy Mother's Day!</title>
     <link rel="canonical" href="/" />
     <meta name="description" content="Happy Mother's Day!"> 
     <link rel="stylesheet" type="text/css" href="/css/nc.css">
