reading eggs minor change

--- a/maia/readingeggs/index.html
+++ b/maia/readingeggs/index.html
@@ -191,7 +191,7 @@ I&rsquo;ve collected most of the good stories here, as a testament to our daught
 <img src="images/201321BaileyDog.gif"  width="100%"/></div>
 <div><br/></div>
 <div>Bailey&rsquo;s dog-siting wikend</div>
-<div>1. I tuck bailey my anti brew&rsquo;s dog for the wikend.</div>
+<div>1. I tuck bailey my anti bree&rsquo;s dog for the wikend.</div>
 <div>3. He ate ill the sosij&rsquo;s.</div>
 <div>5. Then he got sick.</div>
 <div>7. Then he chud on my sok&rsquo;s that ment take me home you see bree is a vet.</div>
