reading eggs minor change

--- a/maia/readingeggs/index.html
+++ b/maia/readingeggs/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Maia Clisby de la Piedad's homepage</title>
+    <title>Maia's Reading Eggs stories</title>
     <link rel="canonical" href="/" />
-    <meta name="description" content="Homepage of Maia Clisby de la
+    <meta name="description" content="Stories by Maia Clisby de la
     Piedad."> 
     <link rel="stylesheet" type="text/css" href="../css/maia.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
