hmd minor change

--- a/hmd/index.html
+++ b/hmd/index.html
@@ -18,10 +18,14 @@
         <div id="contentblock">
             <div id="content">
                 <h1 style="display:inline-block;line-height:1.0em;margin-bottom:-0.3em;">
-                    Happy Mother's Day!
+                    Happy Mother&rsquo;s Day!
                 </h1>
                 <p>
-                More to come soon.
+                Hope you enjoy your flowers! And hope to see you soon in
+                Melbourne, for Maia&rsquo;s birthday or the Lion King.
+                </p>
+                <p>
+                More to come soon, check back on Sunday, May 10.
                 <!--<div class="image">-->
                 <!--<img src="maia_portrait.png" alt="me" width="25%"-->
                 <!--style="float:right;min-width:100px;margin: 10px 0px 0px-->
