--- a/hmd/index.html
+++ b/hmd/index.html
@@ -24,8 +24,12 @@
                 Hope you enjoy your flowers! And hope to see you soon in
                 Melbourne, for Maia&rsquo;s birthday or the Lion King.
                 </p>
+
+
+<iframe width="560" height="315"
+    src="https://www.youtube.com/embed/Yp4q4VhmG8A" frameborder="0"
+    allowfullscreen></iframe>
                 <p>
-                More to come soon, check back on Sunday, May 10.
                 <!--<div class="image">-->
                 <!--<img src="maia_portrait.png" alt="me" width="25%"-->
                 <!--style="float:right;min-width:100px;margin: 10px 0px 0px-->
