--- a/hmdx/index.html
+++ b/hmdx/index.html
@@ -28,8 +28,8 @@
 <br/>
 <br/>
 <br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Love,<br/> <br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nathan and Maia
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;With lots of love, y con muchos abrazos,<br/> <br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nathan and Maia
                 </p>
 <br/>
 <br/>
