Added lovelock seminar, twisted offer

--- a/entingfest/index.html
+++ b/entingfest/index.html
@@ -26,6 +26,7 @@
 <meta name="theme-color" content="#ffffff">
 </head>
 
+
 <body>
     <div id="topwrapper">
         <div id="topbar">
@@ -183,6 +184,40 @@ Enting fest, 2015
                 href="https://scholar.google.com/scholar?q=%28author%3Aian+OR+author%3Aig%29+AND+author%3Aenting&btnG=&hl=en&as_sdt=0%2C5">Google
                 Scholar</a>.
             </p>
+<p>
+Ian is the author of two books, <a
+    href="http://dx.doi.org/10.1017/CBO9780511535741">Inverse problems in Atmospheric
+    Constituent Transport</a> (published in 2002 by Cambridge University Press) and <a
+    href="https://books.google.com.au/books/about/Twisted.html?id=Zxy0PAAACAAJ&hl=en">Twisted</a>
+(published in 2007 by Ian Enting, printed by Australian Mathematical Sciences
+Institute). <i>Twisted: The distorted mathematics of greenhouse
+    denial</i>, exposes the numerous contradictions in the arguments of
+the &ldquo;greenhouse sceptics&rdquo; and suggests they are far from
+constituting an alternative to mainstream climate science.
+Unfortunately, Ian's lovely little book is as relevant in 2015 as it was
+in 2007.
+</p>
+<p>
+If you represent an
+environmental organisation within Australia you are welcome to a free copy of Twisted. 
+To obtain your copy, please 
+send a stamped, self-addressed A4 envelope to Nathan Clisby, MASCOS, 139
+Barry St, Carlton VIC 3053.
+As of May, 2015 postage costs $3.50 (please check postage
+costs after this date). It may be a good idea to include your contact
+details (e.g. email address) in the envelope in the event of any
+problems.
+</p>
+<p>
+Also, Ian spoke about <a href="http://en.wikipedia.org/wiki/James_Lovelock">James Lovelock</a> (formulator of the <a
+    href="http://en.wikipedia.org/wiki/Gaia_hypothesis">Gaia
+    hypothesis</a>) in 2009 as part of the The Monthly's Key Thinkers
+series.
+</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLja2--Az4ZUyfhuO-Q0xsGnKPUUKGyAZM" frameborder="0" allowfullscreen></iframe>
+<br/>
+<br/>
+Finally, here are a few photos! 
 <table>
     <tr><td>
                 <img src="images/twisted_in_antarctica.png" alt="Twisted in
@@ -216,7 +251,8 @@ right in 1996,
 after a year in the job!
 </td></tr>
 </table>
-            <br/>
+<br/>
+<br/>
             <p style="font-size:0.8em">
             This webpage is still under development. If you have any
             comments or (especially) photos please contact <a
