Formatting of table for Enting-fest

--- a/entingfest/index.html
+++ b/entingfest/index.html
@@ -77,30 +77,38 @@ Enting fest, 2015
             <p>
             The symposium schedule was:
             </p>
-            <table>
-                <tr><td>
+            <table style="width:100%">
+                <tr><td style="text-align:right;padding-right:20px">
                         9:30
                         </td><td>
                         Paul Krummel
                         </td><td>
                         Welcome and logistics
                 </td></tr>
-                <tr><td>
+                <tr><td style="text-align:right;padding-right:20px">
                         9:45
                         </td><td>
                         Peter Rayner
                         </td><td>
                         Introduction and biographical sketch
                 </td></tr>
-                <tr><td>
+                <tr><td style="text-align:right;padding-right:20px">
                         10:00
                         </td><td>
-                        David Etheridge / Roger Francey
+                         Roger Francey
+                        </td><td>
+                        Historical
+                            perspective I
+                </td></tr>
+                <tr><td style="text-align:right;padding-right:20px">
+                        10:05
+                        </td><td>
+                        David Etheridge
                         </td><td>
                         <a href="talks/etheridge_entingfest.pdf">Historical
-                            perspective</a>
+                            perspective II</a>
                 </td></tr>
-                <tr><td>
+                <tr><td style="text-align:right;padding-right:20px">
                         10:15
                         </td><td>
                         Tony Guttmann
@@ -108,14 +116,14 @@ Enting fest, 2015
                         <a href="talks/guttmann_entingfest.pdf">The quest for
                             solubility</a>
                 </td></tr>
-                <tr><td>
+                <tr><td style="text-align:right;padding-right:20px">
                         10:45
                         </td><td>
                         (coffee
                         break)
                         </td><td>
                 </td></tr>
-                <tr><td>
+                <tr><td style="text-align:right;padding-right:20px">
                         11:15
                         </td><td>
                         Cathy Trudinger
@@ -123,14 +131,14 @@ Enting fest, 2015
                         <a href="talks/trudinger_entingfest.pdf">Past
                             atmospheric composition</a>
                 </td></tr>
-                <tr><td>
+                <tr><td style="text-align:right;padding-right:20px">
                         11:45
                         </td><td>
                         Nathan Clisby
                         </td><td>
                         <a href="talks/clisby_entingfest.pdf">Lattice enumeration</a>
                 </td></tr>
-                <tr><td>
+                <tr><td style="text-align:right;padding-right:20px">
                         12:15
                         </td><td>
                         Rachel Law
@@ -138,14 +146,14 @@ Enting fest, 2015
                         <a href="talks/law_entingfest.pdf">Atmospheric
                             inversions</a>
                 </td></tr>
-                <tr><td>
+                <tr><td style="text-align:right;padding-right:20px">
                         12:45
                         </td><td>
                         (lunch
                         break)
                         </td><td>
                 </td></tr>
-                <tr><td>
+                <tr><td style="text-align:right;padding-right:20px">
                         13:45
                         </td><td>
                         Peter Rayner
@@ -153,7 +161,7 @@ Enting fest, 2015
                         <a href="talks/rayner_entingfest.pdf">Experimental
                             design</a>
                 </td></tr>
-                <tr><td>
+                <tr><td style="text-align:right;padding-right:20px">
                         14:15
                         </td><td>
                         Graeme Pearman
@@ -161,7 +169,7 @@ Enting fest, 2015
                         <a href="talks/pearman_entingfest.pdf">Public
                             engagement</a>
                 </td></tr>
-                <tr><td>
+                <tr><td style="text-align:right;padding-right:20px">
                         14:45
                         </td><td>
                         Ian Enting
