--- a/projects/hamiltonian_path/index.html
+++ b/projects/hamiltonian_path/index.html
@@ -145,6 +145,13 @@ repeat), &ldquo;shift+r&rdquo; makes 100 random moves, &ldquo;e&rdquo; makes a
 random move for either end (hold down to repeat), &ldquo;shift+e&rdquo; makes 100
 random moves.
 </p>
+<p>
+New command (June 4, 2015): &ldquo;s&rdquo; toggles between different
+modes for showing the trace of the movement of the ends. Default mode: show
+nothing, record nothing (erase traces). Record mode: record traces and
+draw them. Show mode: no longer add to recording of traces, but continue showing
+existing one.
+</p>
 <div class="spacer"></div>
 <p>
 <center>
