--- a/contact/index.html
+++ b/contact/index.html
@@ -78,7 +78,7 @@
                 </table>
 
                 <table>
-                    <tr><td>Tel.:  </td><td> +61 3 8344 3759 (Office)</td></tr>
+                    <tr><td>Tel.:  </td><td> +61 3 8344 3759</td></tr>
                     <tr><td>Fax:  </td><td> +61 3 9347 8165
                             </td></tr>
                     <tr><td>Email:  </td><td> 
