--- a/for_greg/index.html
+++ b/for_greg/index.html
@@ -64,14 +64,9 @@
                 <div style="display:block;float:left;margin-right:1.5em;vertical-align:top;">
                 <a href="/" ><img src="/img/nc_full_logo.png"></img></a></div>
                 <div style="display:block;float:left;clear:right;vertical-align:top;">
-                   Email for Greg, because his account is over the quota 
+                   Email for Greg, because his account is over his quota 
                 </div>
                 </h1>
-                <p>
-                <div class="image">
-                <img src="nathan_portrait.jpg" alt="me" width="20%"
-                style="float:right;min-width:100px;margin: 10px 0px 0px
-                10px">
             </div>
 
 
