updated hamiltonian path index.html

--- a/projects/hamiltonian_path/index.html
+++ b/projects/hamiltonian_path/index.html
@@ -152,6 +152,10 @@ nothing, record nothing (erase traces). Record mode: record traces and
 draw them. Show mode: no longer add to recording of traces, but continue showing
 existing one.
 </p>
+<p>
+New command (February 1, 2016): &ldquo;v&rdquo; toggles between 
+hiding and showing walk, in order to highly the vector field (arrows).
+</p>
 <div class="spacer"></div>
 <p>
 <center>
