topics, minor update

--- a/research/topics/index.html
+++ b/research/topics/index.html
@@ -92,7 +92,8 @@
             </h2>
             <p>
 In 2010 I developed a new implementation of the pivot algorithm for
-self-avoiding walks which used a binary tree representation, building on
+self-avoiding walks which used a binary tree representation called a
+SAW-tree, building on
 earlier work of Tom Kennedy, Neal Madras and Alan Sokal. This radically
 efficient implementation allows for global changes to be made to the
 system in logarithmic time, and so opens up the possibility of studying
