topics, minor update

--- a/research/topics/index.html
+++ b/research/topics/index.html
@@ -63,24 +63,24 @@
                 </div>
                 </h1>
             <p>
-            <!--<a href="#mcmc">-->
-                <!--Efficient algorithms for Markov chain Monte-->
-                <!--Carlo simulaton</a>,-->
-            <!--<a href="#virial">-->
-                <!--Virial series</a>,-->
-            <!--<a href="#enumeration">-->
-                <!--Enumeration of self-avoiding walks and related objects</a>,-->
-            <!--<a href="#endless">-->
-                <!--Endless walk models</a>,-->
-            <!--<a href="#climate">-->
-                <!--Multi-gas modelling for climate change</a>,-->
-            <!--<a href="#polymer">-->
-                <!--Polymer physics</a>,-->
-            <!--<a href="#visualisation">-->
-                <!--Mathematical visualisation</a>,-->
-            <!--<a href="#gpu">-->
-                <!--Backtracking algorithms implemented on GPUs-->
-            <!--</a>.-->
+            <a href="#mcmc">
+                Efficient algorithms for Markov chain Monte
+                Carlo simulaton</a>,
+            <a href="#virial">
+                Virial series</a>,
+            <a href="#enumeration">
+                Enumeration of self-avoiding walks and related objects</a>,
+            <a href="#endless">
+                Endless walk models</a>,
+            <a href="#climate">
+                Multi-gas modelling for climate change</a>,
+            <a href="#polymer">
+                Polymer physics</a>,
+            <a href="#visualisation">
+                Mathematical visualisation</a>,
+            <a href="#gpu">
+                Backtracking algorithms implemented on GPUs
+            </a>.
             
         Below I give a brief synopsis of my research interests in the
         topics below. No citations are given for the moment - sorry! -
