topics, minor update

--- a/research/topics/index.html
+++ b/research/topics/index.html
@@ -62,8 +62,15 @@
                     Topics
                 </div>
                 </h1>
+
             <p>
-            <a href="#mcmc">
+        Below I give a brief synopsis of my research interests in the
+        topics below. No citations are given for the moment - sorry! -
+        as I've only got time to write down some broad brushstrokes.
+        I&rsquo;ve highlighted a few potential projects,
+        but there are many more possibilities.</p>
+            <p>
+            Links: <a href="#mcmc">
                 Efficient algorithms for Markov chain Monte
                 Carlo simulaton</a>,
             <a href="#virial">
@@ -81,12 +88,7 @@
             <a href="#gpu">
                 Backtracking algorithms implemented on GPUs
             </a>.
-            
-        Below I give a brief synopsis of my research interests in the
-        topics below. No citations are given for the moment - sorry! -
-        as I've only got time to write down some broad brushstrokes.
-        I&rsquo;ve highlighted a few potential projects,
-        but there are many more possibilities.
+            </p>
             <h2 id="mcmc">Efficient algorithms for Markov chain Monte Carlo
                 simulation
             </h2>
