topics, minor update

--- a/research/topics/index.html
+++ b/research/topics/index.html
@@ -326,7 +326,7 @@ especially given that the technology is changing so quickly.
     <div id="bottombar">
             <div id="footer">
                <div id="footquote">
-                    <script src="includesnippet.js"></script>
+                    <script src="/includesnippet.js"></script>
                 </div>
             </div> <!-- footer -->
     </div> <!-- bottombar -->
