research, minor update

--- a/research/index.html
+++ b/research/index.html
@@ -71,8 +71,7 @@
             research interests, with a more detailed list of possible
             research topics and directions for potential students and
             collaborators on the <a
-                href="topics/">topics</a> page (30/12/14: empty for now, 
-            will be added to over the coming weeks). 
+                href="topics/">topics</a> page.
             My publications are
             listed and many talks are available for download on my <a
                 href="publications/">publications</a> page.
