initial add of snake puzzle

--- a/projects/snake_puzzle/index.html
+++ b/projects/snake_puzzle/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>projects</title>
-    <link rel="canonical" href="/projects/" />
-    <meta name="description" content="Projects section of Nathan
-    Clisby's homepage, provides a brief overview and then links to
-    various projects including visual representation of the pivot
-    algorithm for self-avoiding walks and Hamiltonian paths.">
+    <head>
+    <title>software</title>
+    <link rel="canonical" href="/projects/snake_puzzle/" />
     <link rel="stylesheet" type="text/css" href="/css/nc.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
@@ -36,11 +32,11 @@
         ga('create', 'UA-58103598-1', 'auto');
         ga('send', 'pageview');
     </script>
-</head>
-
-<body>
+    </head>
+    <body>
     <div id="topwrapper">
     <div id="topbar">
+        <!--Can assume that tnav elements 2x width of bnav-->
         <div class="tnav">
             <ul>
                 <li><a href="/">home</a></li>
@@ -50,9 +46,10 @@
         </div> <!-- tnav -->
         <div class="bnav w3">
             <ul>
-                <li><a class="current" href="/projects/">(main)</a></li>
+                <li><a href="/projects/">(main)</a></li>
                 <li><a href="/projects/saw_videos/">(SAW videos)</a></li>
-                <li><a href="/projects/software/">(software)</a></li>
+                <li><a class="current" 
+                    href="/projects/software/">(software)</a></li>
             </ul>
         </div> <!-- bnav -->
         <div class="bnav w3">
@@ -71,33 +68,19 @@
             </ul>
         </div> <!-- bnav -->
     </div> <!-- topbar -->
-
     <div id="contentblock">
         <div id="content">
                 <h1 style="display:inline-block;line-height:1.0em;margin-bottom:0.5em;">
                 <div style="display:block;float:left;margin-right:1.5em;vertical-align:top;">
                 <a href="/" ><img src="/img/nc_full_logo.png"></img></a></div>
                 <div style="display:block;float:left;clear:right;vertical-align:top;">
-                Projects
+                3d Printed Snake Puzzle
                 </div>
                 </h1>
-            <p>
-            In this section you will find pages for various projects I
-            have worked on, particularly those with 
-            a non-publication output such as a simulation, or an
-            animation, or software tools.
-            </p>
-            <p>
-            I'm very interested in using mathematical visualisations as
-            a tool in both education (igniting curiosity, explaining difficult
-            concepts) and research (developing intuition and testing
-            ideas). My reasoning tends to be highly
-            dependent on finding appropriate visual imagery, and the
-            right computer tool can be enormously helpful. 
-            </p>
-            <p>
-            Please look around!
-            </p>
+                <p>
+                3d printed snake puzzle.
+                </p>
+
         </div> <!-- content -->
     </div> <!-- contentblock -->
     <div id="push"></div>
@@ -109,5 +92,5 @@
                 </div>
             </div> <!-- footer -->
     </div> <!-- bottombar -->
-</body>
+    </body>
 </html>
