added snake puzzle and pebble app

--- a/projects/backtracker/index.html
+++ b/projects/backtracker/index.html
@@ -59,6 +59,13 @@
                     href="/projects/hamiltonian_path/">(Hamiltonian paths)</a></li>
             </ul>
         </div> <!-- bnav -->
+        <div class="bnav w3">
+            <ul>
+                <li><a href="/projects/snake_puzzle/">(3d printed puzzle)</a></li>
+                <li><a href="/projects/pebble_app/">(pebble app)</a></li>
+                <li></li>
+            </ul>
+        </div> <!-- bnav -->
     </div> <!-- topbar -->
 
     <div id="contentblock">
