--- a/projects/saw_videos/index.html
+++ b/projects/saw_videos/index.html
@@ -63,6 +63,13 @@
                     href="/projects/hamiltonian_path/">(Hamiltonian paths)</a></li>
             </ul>
         </div> <!-- bnav -->
+        <div class="bnav w3">
+            <ul>
+                <li><a href="/projects/snake_puzzle/">(3d printed puzzle)</a></li>
+                <li><a href="/projects/pebble_app/">(pebble app)</a></li>
+                <li></li>
+            </ul>
+        </div> <!-- bnav -->
     </div> <!-- topbar -->
     <div id="contentblock">
         <div id="content">
@@ -75,7 +82,7 @@
                 </h1>
         <!--<p>Statistical mechanics simulator due to <a href="http://lattice.complex.unimelb.edu.au/home/">Nathan Clisby</a>, 2013.</p>-->
             <div class="image"  style =
-                "float:right;max-width:370px;width:50%min-width:200px;">
+                "float:right;max-width:370px;width:50%;min-width:200px;">
         <!--actual width is 350px-->
                 <img src="sawsmall.gif"
                 alt="Animation of self-avoiding walk of 1048575 steps on
