--- a/index.html
+++ b/index.html
@@ -89,6 +89,15 @@
                 and in future software for download. 
                 </p>
                 <p>
+                <b>Recent updates:</b> 17/2/15, List of <a
+                    href="/research/topics/">topics</a> updated so that
+                it is more than a placeholder, new projects <a
+                    href="/projects/snake_puzzle/">3d printed snake
+                    puzzle</a> and <a
+                    href="/projects/pebble_app/">Pebble smartwatch app
+                    implementing backbite algorithm</a> created.
+                </p>
+                <p>
                 This is a long overdue overhaul of my <a href="http://lattice.complex.unimelb.edu.au/home/">old homepage</a>,
                 which had fallen into disrepair. With the goal of
                 maintaining the new version indefinitely (at least the
